// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-21c50e09-1 fFZQMr undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-21c50e09-2 fqihiA undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
